
HANDBOOK THINGS:
- Meal names fixed in handbook - DONE!!!
- Recipe notes added to meals in the handbook - DONE!!!
- Meal descriptions added - DONE!!!
- Items grouped together for better handbook visibility
- Handbook item grouping tightened up
- Muffins and fruit bread have default visuals in the handbook
- Meal recipes generally adjusted to look better in the handbook - DONE!!!

REBALANCING:
- Soy milk fully changed to protein instead of dairy - DONE!!!
- Wine can be used in compote - DONE!!!
- All fried items in salad and cold pasta moved to a single ingredient slot - DONE!!!
- Cold pasta and yogurt meal perish timer reduced by 24 hours - DONE!!!
- Pilaf recipe changed to require rice+broth instead of rice+solid ingredient; rice requirement doubled - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Hardened resin fixed so it hardens properly
- Chopped veggies go into porridge
- Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- en.json cleansed of wildcraft text - DONE!!!; generally cleaned up and reorganized 
- Peanut skin model changed
- Soybean textures/shapes updated
- Dried peat bowl remapping done - DONE!!!


2.0.0-dev.3
- Scrambled egg recipe fixed
- Scrambled egg shape updated & textures updated for all liquid egg variants
- All egg visuals updated; new boiled egg texture 
- Water-glassed eggs can be cracked now
- More Animals compatibility updated, while we're doing all this egg stuff


2.0.0-dev.2
- Fixed old oil candle and other recipes crashing due to referencing the old bottles variant schema (new recipes dont account for whether a bottle is corked or not) 


2.0.0-dev.1
- New 1.20 clays integrated (thanks pizza2004!)