@@ -109,7 +109,7 @@
         { "type": "item", "code": "vegetable-cassava", "shapeElement": "bowl/vegetable 1/*" },
         { "type": "item", "code": "mushroom-*", "shapeElement": "bowl/vegetable 1/*" },
         { "type": "block", "code": "pumpkin-fruit-4", "shapeElement": "bowl/vegetable 1/*" },
-        { "type": "item", "code": "expandedfoods:choppedvegetable-carrot", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group1" ] },
+        { "type": "item", "code": "pickledvegetable-*", "shapeElement": "bowl/vegetable 1/*" },
         { "type": "item", "code": "expandedfoods:choppedmushroom-almondmushroom", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group3" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-beardedtooth", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group7" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-bitterbolete", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group3" ] },
@@ -148,6 +148,7 @@
         { "type": "item", "code": "expandedfoods:choppedmushroom-violetwebcap", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group3" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-whiteoyster", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group7" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-witchhat", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group7" ] },
+        { "type": "item", "code": "expandedfoods:choppedvegetable-carrot", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group1" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-parsnip", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group4" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-turnip", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group5" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-onion", "shapeElement": "bowl/vegetable 1/*", "textureMapping": [ "vegetable", "group6" ] },
@@ -186,7 +187,6 @@
         { "type": "item", "code": "mushroom-*", "shapeElement": "bowl/vegetable 2/*" },
         { "type": "block", "code": "pumpkin-fruit-4", "shapeElement": "bowl/vegetable 2/*" },
         { "type": "item", "code": "pickledvegetable-*", "shapeElement": "bowl/vegetable 2/*" },
-        { "type": "item", "code": "expandedfoods:choppedvegetable-carrot", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group1" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-almondmushroom", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group3" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-beardedtooth", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group7" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-bitterbolete", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group3" ] },
@@ -225,6 +225,7 @@
         { "type": "item", "code": "expandedfoods:choppedmushroom-violetwebcap", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group3" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-whiteoyster", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group7" ] },
         { "type": "item", "code": "expandedfoods:choppedmushroom-witchhat", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group7" ] },
+        { "type": "item", "code": "expandedfoods:choppedvegetable-carrot", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group1" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-parsnip", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group4" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-turnip", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group5" ] },
         { "type": "item", "code": "expandedfoods:choppedvegetable-onion", "shapeElement": "bowl/vegetable 2/*", "textureMapping": [ "vegetable", "group6" ] },
