@@ -96,6 +96,7 @@ HANDBOOK THINGS:
 - Handbook item grouping tightened up
 - Muffins and fruit bread have default visuals in the handbook
 - Meal recipes generally adjusted to look better in the handbook - DONE!!!
+- Added text for scrambled egg ingredients
 
 REBALANCING:
 - Soy milk fully changed to protein instead of dairy - DONE!!!
@@ -107,7 +108,6 @@ REBALANCING:
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
 - Hardened resin fixed so it hardens properly
-- Chopped veggies go into porridge
 - Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
 
 NEW FOOD:
@@ -122,6 +122,7 @@ MISC:
 - Peanut skin model changed
 - Soybean textures/shapes updated
 - Dried peat bowl remapping done - DONE!!!
+- Dried peat bowl text fixed
 
 
 2.0.0-dev.3
